# AWP

./: .gitattributes  .gitignore  AUTHORS  BUGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAD.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  tests.yml
Project_Documents/: 01_30_35_Deck.pptx  01_30_35_Poster.pptx  P1_Learning_Summary.docx  _35_01_30_Deck.pptx  ~$01_30_35_Deck.pptx
docs/: README.md
src/API/: app.py  index.py  requirements.txt  vercel.json
src/API/endpoints/: future.py  manual.py  present.py
src/API/endpoints/assets/model/: model.h5
src/API/endpoints/assets/observing/: HKobservatory.py  __init__.py  unitConvert.py
src/gui/: __init__.py  hui.py  program.py
src/gui/pages/: Manualinput.py  finalOutput.py  future.py  home.py  manualInput.py  predictions.py  present.py
src/gui/pages/assets/: backbutton.py  roundedbutton.py
src/gui/pages/predictionPages/: future.py  manualInput.py  present.py
src/gui/pages/predictions/: future.py  present.py
src/model/: __init__.py  model.ipynb  training.py
src/model/datasets/: README.md  Testing_Data.csv  __init__.py  dataset.csv
src/model/raw/: model.h5
src/observing/: HKobservatory.py  __init__.py  unitConvert.py
src/tests/: test_model.py  test_sample.py  test_weather.py
