[build-system]
requires = ["setuptools>=63.2.0",
            "tensorflow>=2.10.1",
            "numpy>=1.24.1",
            "pandas>=1.5.2",
            "requests>=2.28.1",
            "matplotlib>=3.5.1",
            "scikit-learn>=1.2.1",
            "keras>=2.11.0",
            "scipy>=1.10.0",
            "pyglet>=2.0.dev18"]
build-backend = "setuptools.build_meta"
